<resources>
    <string name="app_name">Mercury</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_ablum">Open Ablum</string>
    <string name="clear_sp">Clear SP</string>
    <string name="avatar_camera">AvatarCamera</string>
    <string name="layout_test">LayoutTest</string>
    <string name="radar_view">RadarView</string>
    <string name="indicator">Indicator</string>
    <string name="progressview">ProgresView</string>
    <string name="behavior">Behavior</string>
    <string name="path">PathMeasure</string>
    <string name="scrollcut">ScrollCutView</string>
    <string name="banner">Banner</string>
    <string name="motion">MotionLayout</string>
    <string name="transition">Transition</string>
    <string name="watermask">watermask</string>
    <string name="snackbar">Snackbar</string>
    <string name="hook">Hook</string>
    <string name="text_test">君不见黄河之水天上来，奔流到海不复回。</string>
    <string name="test_transformPivot">transformPivotX transformPivotY</string>

    <string name="text_long">将进酒 \n\n

    唐代：李白\n\n

    君不见黄河之水天上来，奔流到海不复回。\n
    君不见高堂明镜悲白发，朝如青丝暮成雪。\n
    人生得意须尽欢，莫使金樽空对月。\n
    天生我材必有用，千金散尽还复来。\n
    烹羊宰牛且为乐，会须一饮三百杯。\n
    岑夫子，丹丘生，将进酒，杯莫停。\n
    与君歌一曲，请君为我倾耳听。(倾耳听 一作：侧耳听)\n
    钟鼓馔玉不足贵，但愿长醉不愿醒。(不足贵 一作：何足贵；不愿醒 一作：不复醒)\n
    古来圣贤皆寂寞，惟有饮者留其名。(古来 一作：自古；惟 通：唯)\n
    陈王昔时宴平乐，斗酒十千恣欢谑。\n
    主人何为言少钱，径须沽取对君酌。\n
    五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。</string>
<!--    将进酒

    唐代：李白

    君不见黄河之水天上来，奔流到海不复回。
    君不见高堂明镜悲白发，朝如青丝暮成雪。
    人生得意须尽欢，莫使金樽空对月。
    天生我材必有用，千金散尽还复来。
    烹羊宰牛且为乐，会须一饮三百杯。
    岑夫子，丹丘生，将进酒，杯莫停。
    与君歌一曲，请君为我倾耳听。(倾耳听 一作：侧耳听)
    钟鼓馔玉不足贵，但愿长醉不愿醒。(不足贵 一作：何足贵；不愿醒 一作：不复醒)
    古来圣贤皆寂寞，惟有饮者留其名。(古来 一作：自古；惟 通：唯)
    陈王昔时宴平乐，斗酒十千恣欢谑。
    主人何为言少钱，径须沽取对君酌。
    五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。-->


    <string name="tab1">君不见黄河</string>
    <string name="tab2">莫使</string>
    <string name="tab3">transformPivotX</string>
    <string name="tab4">朝如青丝暮成雪</string>
    <string name="tab5">自古</string>
    <string name="tab6">transformPivotX</string>
    <string name="tab7">千金裘</string>
    <string name="tab8"> 莫使金樽空对月</string>

    <string name="data_plus">增加一个数据</string>
    <string name="data_minus">减少一个数据</string>

    <string name ="price0">谢谢惠顾！</string>
    <string name ="price1">想得挺美。</string>
    <string name ="price2">中奖啦！</string>
    <string name ="price3">继续努力吧！</string>
    <string name ="price4">下次一定</string>

</resources>
