<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/horizontal_scroll"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:paddingBottom="16dp">

        <com.mercury.demo.common.RalewayTextView
            android:id="@+id/tag0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor"
            android:text="@string/tab3"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"/>


        <com.mercury.demo.common.RalewayTextView
            android:id="@+id/tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor"
            android:text="@string/tab1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"/>


        <com.mercury.demo.common.RalewayTextView
            android:id="@+id/tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor"
            android:text="@string/tab4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"/>

        <com.mercury.demo.common.RalewayTextView
            android:id="@+id/tag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor"
            android:text="@string/tab3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"/>

        <com.mercury.demo.common.RalewayTextView
            android:id="@+id/tag4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor"
            android:text="@string/tab5"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"/>

        <com.mercury.demo.common.RalewayTextView
            android:id="@+id/tag5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor"
            android:text="@string/tab4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"/>

    </LinearLayout>

</HorizontalScrollView>