<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_gravity="center"
        android:src="@drawable/u"
        android:contentDescription="@null"/>


    <TextView
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_yellow_23"
        android:paddingTop="15dp"
        android:textColor="@color/textcolor"
        android:paddingBottom="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"/>

    <TextView
        android:id="@+id/open_ablum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_ablum"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/take_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_yellow_ring_26"
        android:paddingTop="15dp"
        android:textColor="@color/textcolor"
        android:paddingBottom="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"/>

    <TextView
        android:id="@+id/clear_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_sp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/open_ablum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_yellow_ring_26"
        android:paddingTop="15dp"
        android:textColor="@color/textcolor"
        android:paddingBottom="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>